tests/NormalTests/paczka2/big_fuzzy/75903872.err
Error in line 12: Z0XdZsKkmd7 A736 89,5
Error in line 22: YfL S383 10,3
Error in line 25: ZFP8 S383 22,5
Error in line 28: pZz7hdN2ic A465 5,3
Error in line 10: lRK A465 60,2
Error in line 32: lRK A736 26,7
Error in line 46: S383 A121 26,9
Error in line 45: Z0XdZsKkmd7 S383 56,1
Error in line 44: lRK S383 103,4
Error in line 75: TSkLJn7 A736 93,3
Error in line 86: ZFP8 A465 60,6
Error in line 64: lRK A121 64,7
Error in line 102: S383 A121 91,3
Error in line 94: TSkLJn7 S383 7,3
Error in line 105: S383 S383 15,6
Error in line 119: ZFP8 A121 6,5
Error in line 114: TSkLJn7 A121 84,4
Error in line 143: YfL A121 10,7
Error in line 150: S383 A465 96,2
Error in line 139: lRK S383 84,5
Error in line 156: TSkLJn7 S383 16,5
Error in line 171: Z0XdZsKkmd7 S383 65,1
Error in line 182: pZz7hdN2ic A736 57,8
Error in line 179: S383 A736 20,7
Error in line 197: Z0XdZsKkmd7 S383 -3,3
Error in line 198: S383 A121 0,9
Error in line 200: S383 A465 67,1
Error in line 192: YfL A736 3,1
Error in line 193: Z0XdZsKkmd7 S383 67,4
Error in line 209: ZFP8 A736 71,1
Error in line 191: pZz7hdN2ic A465 391,5
Error in line 218: pZz7hdN2ic S383 98,9
Error in line 219: lRK A121 15,1
Error in line 224: lRK A465 89,6
Error in line 214: TSkLJn7 A736 48,8
Error in line 225: lRK S383 58,4
Error in line 233: ZFP8 A465 82,7
Error in line 231: TSkLJn7 A465 79,4
Error in line 236: TSkLJn7 S383 79,8
Error in line 240: Z0XdZsKkmd7 A465 28,0
